<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Financly</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="login">Login</string>
    <string name="register">Do not have a user yet? Sign in here</string>
    <string name="forgot_username_or_password">I forgot password</string>
    <string name="pass_validate">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="have_user_so_sign_in">Have a user already? Login here</string>
    <string name="icon">Icon</string>
    <string name="category_name">Category Name</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>

    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>

    <string name="dialog_reset_title">Reset Password</string>
    <string name="dialog_reset_message">Press OK to get password reset link to your email</string>

    <string name="email_sent">Password reset link was sent to your email address</string>
    <string name="email_was_not_sent_successfully">Email is not exists, Check The email you entered and try again</string>
    <string name="email_text_is_empty">Email text is empty, please fill your correct email in the text and try again</string>

    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure you want to logout from the System?</string>


    <string name="emptyText">No income/expanse,\nClick the plus button in the bottom corner to add one, Or tap the menu button for more options.</string>
    <string name="details">Details</string>
    <string name="dialog_message">Choose a category and  describe your income/expanse</string>
    <string name="editTextDescribe">Describe your income/expanse</string>

    <string name="בית">House</string>
    <string name="אוכל">Food</string>
    <string name="ביגוד">Clothes and shoes</string>
    <string name="שכירות">Rent</string>
    <string name="משכנתא">Mortgage</string>
    <string name="חשבונות">Bills</string>
    <string name="הלוואות">Loans</string>
    <string name="טואלטיקה">Toiletries/Cleaning</string>
    <string name="רכב">Car</string>
    <string name="Public_transport">Public transport</string>
    <string name="ביטוחים">Insurance</string>
    <string name="תקשורת">Communications</string>
    <string name="חדר_כושר">Gym</string>
    <string name="חיסכון">Savings</string>
    <string name="לימודים">Studies</string>
    <string name="בתי_ספר">School</string>
    <string name="גני_ילדים">Kindergarten</string>
    <string name="בילויים">Spending time</string>
    <string name="מסעדות">Restaurants</string>
    <string name="חיות">Pets</string>
    <string name="מתנות">Gifts</string>
    <string name="אחר">Other</string>
    <string name="משכורת">Salary</string>
    <string name="תשלום">Payment</string>
    <string name="קניות">Shopping</string>

    <string name="add_line">Add</string>
    <string name="choose_category">Select category</string>
    <string name="enter_amount">Enter Expanse</string>

    <string name="drawer_welcome">Hello</string>
    <string name="good_morning">Good morning</string>
    <string name="good_noon">Good noon</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="good_night">Good night</string>

    <string name="choose">Choose action</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="MyBalance">My balance</string>
    <string name="System">System</string>
    <string name="MyDetails">My details</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="search">Search</string>
    <string name="exit">exit</string>
    <string name="user_icon">user_icon</string>
    <string name="home">home</string>
    <string name="RegisterTitle">Register</string>
    <string name="change">Change</string>
    <string name="about">About</string>
    <string name="my_details">My details</string>
    <string name="email_verification">Email verification is required,make sure your internet connections are OK and try again</string>
    <string name="enter_email">Enter the link in your email in order to finish authentication</string>
    <string name="password_not_equal">The password is not equal</string>
    <string name="name_with_colon">Name :</string>
    <string name="name_hint">user name</string>
    <string name="email_with_colon">Email :</string>
    <string name="my_balance_with_colon">My balance :</string>
    <string name="user_email">user email</string>
    <string name="text_about_page">The Application Financly is a platform to manage and track the user finance. The user can add his incomes or expanses by categories and describe each one of them, in an easy and convenient way.</string>
    <string name="email_not_verified">Verify your email in the link you got in it </string>
    <string name="password_is_wrong">Password is wrong</string>
    <string name="email_is_wrong">Email address is wrong or does not exists</string>
    <string name="weak_password">The password must contain at least six characters</string>
    <string name="malformed_email">Please enter a valid email address</string>
    <string name="email_already_exists">Email is already exists</string>
    <string name="resend_email">Resend verification email</string>
    <string name="confirmation_email_was_sent">Validation email was sent to your email account</string>
    <string name="My_details">My details</string>
    <string name="change_your_name">If you wish, You can change your name</string>
    <string name="enter_the_desired_name">Enter the desired name</string>
    <string name="incomes">Incomes</string>
    <string name="expanses">Expanses</string>
    <string name="other">Other</string>
    <string name="Expanse">Expanse</string>
    <string name="Income">Income</string>


</resources>
