<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_money"
            android:title="@string/MyBalance" />
    </group>

    <item android:title="@string/Systrm">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_details"
                    android:icon="@drawable/profile"
                    android:title="@string/MyDetails" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/About" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/Logout" />

            </group>
        </menu>

    </item>
</menu>