<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:weightSum="10"
    android:background="@color/colorDarkGray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >

        <ImageView
            android:contentDescription="image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/b1"
            android:scaleType="fitXY"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/login_image_shekel"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ils" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_image_shekel"
            android:layout_centerHorizontal="true"
            android:text="@string/login_title"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.6"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp"
            android:background="@color/colorVeryDarkGray"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorVeryDarkGray"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textDirection="rtl" />

        <Button
            android:id="@+id/login_forgot_user_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:gravity="start"
            android:onClick="ResetPassword"
            android:paddingTop="12dp"
            android:text="@string/forgot_username_or_password"
            android:textAllCaps="false"
            android:textColor="@color/colorHint2"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">



            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/circle_loading"
                android:max="100"
                android:layout_marginTop="10dp"
                android:progress="20"
                android:visibility="gone"/>
            <Button
                android:id="@+id/login_resend_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_gravity="start|bottom"
                android:gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/resend_email"
                android:textAllCaps="false"
                android:textColor="@color/colorHint2"
                android:textSize="15sp"
                android:textStyle="bold"
                android:onClick="ResendEmail"
                android:visibility="visible"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.9"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/colorPrimary"
                android:onClick="Login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:onClick="Register"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorHint2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>



</LinearLayout>