<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkGray"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@drawable/b1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/RegisterTitle"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorVeryDarkGray"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_profile"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textDirection="rtl" />

        <EditText
            android:id="@+id/register_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorVeryDarkGray"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock2"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textDirection="rtl" />

        <EditText
            android:id="@+id/register_pass_validate_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorVeryDarkGray"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/pass_validate"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textDirection="rtl" />

        <EditText
            android:id="@+id/register_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorVeryDarkGray"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/register_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:indeterminateDrawable="@drawable/circle_loading"
            android:max="100"
            android:progress="20"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:textAllCaps="false"
                android:id="@+id/Register_SignIn_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:background="@color/colorPrimary"
                android:onClick="SignUp"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/signin_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="#00000000"
                android:onClick="AlreadyHaveUser"
                android:text="@string/have_user_so_sign_in"
                android:textColor="@color/colorHint2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>